Fix spacing before lists

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -8,7 +8,7 @@ dl, dd, ol, ul, figure {
     padding: 0;
 }
 
-p {
+p, ul {
   margin: $spacing-unit 0;
 }
 
